Substantial changes - too many to document!

--- a/resources/dark_theme/channel_widget.css
+++ b/resources/dark_theme/channel_widget.css
@@ -34,4 +34,10 @@
     border-bottom-right-radius: 3px;
     margin-right: 5px;
     font: 12px "Sans";
+    min-width: 80px;
+}
+
+.cwdg_right selection {
+    background-color: $channel_colour$;
+    color: #000000;
 }
