--- a/resources/dark_theme/channel_tab.css
+++ b/resources/dark_theme/channel_tab.css
@@ -9,3 +9,12 @@ tab:nth-child($channel_index$):checked {
 .channel_tab {
     background-image: linear-gradient(180deg, $channel_colour$, #202020 8px);
 }
+
+.channel_button_color {
+    background-image: linear-gradient(180deg, $channel_colour$, $channel_dkcolour$);
+    border-color: $channel_dkcolour$;
+}
+
+.channel_button_color_label {
+    color: $channel_btn_fgcolour$;
+}
