--- a/resources/dark_theme/trigger_tab.css
+++ b/resources/dark_theme/trigger_tab.css
@@ -1,8 +1,7 @@
-.trigger_menuitem image {
+image.trigger_menuitem  {
     background-color: #ff0000;
 }
 
-.trigger_menuitem label {
+label.trigger_menuitem {
     color: #0000ff;
 }
-#dsfkposdsafdk[sdpf] lfgvldfg#'gf;hj6yu7=[p76u'/yhg67yjph
