--- a/resources/dark_theme/trigger_tab.css
+++ b/resources/dark_theme/trigger_tab.css
@@ -1,7 +1,11 @@
-image.trigger_menuitem  {
-    background-color: #ff0000;
+box.trigger_menuitem {
+    margin-left: 0px;
+}
+
+image.trigger_menuitem {
+    padding-left: 5px;
 }
 
 label.trigger_menuitem {
-    color: #0000ff;
+    padding-left: 5px;
 }
