--- a/resources/dark_theme/trigger_tab.css
+++ b/resources/dark_theme/trigger_tab.css
@@ -9,3 +9,7 @@ image.trigger_option_menuitem {
 label.trigger_option_menuitem {
     padding-left: 5px;
 }
+
+.trigger_option_menubutton {
+    padding: 5px;
+}
